fix: use z-index not display

--- a/style.css
+++ b/style.css
@@ -28,3 +28,6 @@ img {
   min-width: 100%;
   min-height: 100vh;
 }
+img {
+  position: absolute;
+}
